kitsune/sumo/static/sumo/less/main.less
/* ... */
#aux-nav > ul > li, #aux-nav-right > ul > li {
  &.dropdown {
    position: relative;

    @media screen and (min-width: 960px) {
      &:not(.user-dropdown):after {
        display: inline-block;
        margin: 0 0 -3px -7px;
        width: 10px;
        height: 13px;
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10.8 17.23'%3E%3Cpolyline points='1.19 16.17 8.68 8.68 1.06 1.06' fill='none' stroke='%23fff' stroke-width='3'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        background-size: auto 100%;
        transform: rotate(90deg);
        content: "";
      }
    }
  }

  &.user-dropdown > ul {
    right: 16px;
  }

  > ul {
    background: #fff;
    box-shadow: 0 2px 3px 0 rgba(0,0,0,.04), 0 2px 10px 0 rgba(0,0,0,.08);
    display: none;
    right: -13px;
    list-style: none;
    margin: 0;
    padding: 12px;
    position: absolute;
    top: 50px;
    width: 160px;
    border-radius: 4px;

    &:before { // hover helper
      position: absolute;
      top: -16px;
      right: -10px;
      left: -10px;
      height: 30px;
      // background: rgba(255,0,0,0.4); // uncomment to debug
      content: "";
    }

    &:after {
      position: absolute;
      top: -10px;
      right: 11px;
      left: auto;
      z-index: 2;
      width: 12px;
      height: 16px;
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15.6 11.2'%3E%3Cpath d='M1 8.6l5.9-7.2c.2-.2.5-.4.8-.4s.6.2.8.4l5.9 7.2s-1 2.6-6.8 2.6S1 8.6 1 8.6z' fill='%23FFF'/%3E%3C/svg%3E");
      background-repeat: no-repeat;
      background-size: 100% 100%;
      content: "";
    }

    &.double {
      width: 400px;

      > li {
        float: left;
        width: 200px;

        &:nth-child(odd) {
          clear: left;

          > a {
            margin-right: 0;
          }
        }
      }
    }

    > li {
      font-size: 14px;
      padding: 0;

      > a,
      > a:visited {
        color: #000;
        display: block;
        text-decoration: none;
        padding: 10px 22px;
        margin: 0 -12px;
      }

      > a:hover {
        color: @textBlue;
        text-decoration: none;
        background: #f0f0f0;
      }

      > a:active {
        color: darken(@textBlue, 20%);
        text-decoration: none;
        background: transparent;
      }

      &:last-of-type {
        > a {
          border: 0;
        }
      }
    }
  }

  &:hover {
    background: #000;

    > ul {
      display: block;
    }

    a {
      text-decoration: underline;
    }
  }
}

.html-rtl {
  #aux-nav {

    > ul {
      > li {
        padding: 0 20px 0 12px;

        &.dropdown {
          & > a:after,
          & > span:after {
            margin: 0 4px 0 0;
          }
        }

        & > ul {
          left: auto;
          right: 0;
          text-align: right;

          &.double > li {
            float: right;
          }
        }
      }
    }

    .unread-message-count {
      right: auto;
      left: -3px;
    }
  }
  #aux-nav-right {

    > ul {
      > li {
        padding: 0 12px 0 20px;
      }
    }

    .unread-message-count {
      left: auto;
      right: -3px;
    }
  }
}

#product-cards {
  display: block;
  margin-left: auto;
  margin-right: auto;

  a,
  a:link,
  a:visited {
    color: @textGrey;
    display: block;
    height: auto;
    padding: 0;
    text-decoration: none;
    width: 100%;

    &:hover {
      .title {
        text-decoration: underline;
      }
    }
  }

  &.card-grid {
    margin-left: 0;
    margin-right: 0;
  }

  &.card-grid > li {
    border: 1px solid #E7E7E7;
    border-radius: 2px;
    box-shadow: inset 0 -2px 0 0 #E7E7E7;
    min-height: 240px;
    margin: 0 0 28px;
    overflow: hidden;
    padding: 0;
    width: 100%;

    &::before {
      content: none;
    }
  }

  @media screen and (min-width: 960px) {
    &.card-grid {
      margin-left: -12px;
      margin-right: -12px;

      > li {
        margin: 0 12px 28px;
        width: 30%;
        width: ~"calc(33% - 26px)";
      }
    }
  }

  .thunderbird {
    .logo-sprite {
      background-image: url('../img/icon.thunderbird.png');
    }
  }

  .icon {
    background-color: #f3f3f3;
    padding: 4px 0;

    img {
      display: block;
      height: 122px;
      margin: 0 auto;
      width: auto;
    }
  }

  .title {
    font-size: 16px;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 15px;
    font-weight: bold;
  }

  .description {
    color: #676767;
    font-size: 13px;
    padding: 10px 15px 10px 20px;
  }
}

#stage-banner {
  background: rgba(0, 0, 0, 0.7);
  border: 1px solid #000;
  border-radius: 6px;
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
  color: #fff;
  left: 32px;
  padding: 12px 20px 12px 30px;
  position: fixed;
  text-shadow: 1px 1px 1px #000;
  top: 32px;
  z-index: 9999;

  a,
  a:visited {
    color: #ffcc00;
  }

  .close-button {
    background: #000;
    border: 2px solid #fff;
    border-radius: 15px;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
    cursor: pointer;
    height: 24px;
    left: -8px;
    position: absolute;
    text-indent: -9999px;
    top: -8px;
    width: 24px;

    &:before {
      content: '\2715';
      font-size: 22px;
      height: 24px;
      left: 0;
      line-height: 22px;
      position: absolute;
      text-align: center;
      text-indent: 0;
      top: 0;
      width: 24px;
    }
  }
}
/* ... */

